<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <item
        android:id="@+id/action_add_item"
        android:title="@string/add_item"
        android:icon="@android:drawable/ic_menu_add"
        app:showAsAction="always" />
    
    <item
        android:id="@+id/action_map"
        android:title="@string/nav_map"
        android:icon="@android:drawable/ic_dialog_map"
        app:showAsAction="always" />
    
    <item
        android:id="@+id/action_profile"
        android:title="@string/my_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        app:showAsAction="always" />
    
    <item
        android:id="@+id/action_logout"
        android:title="@string/logout"
        android:icon="@android:drawable/ic_lock_power_off"
        app:showAsAction="never" />
        
</menu>
